k8s/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            backend:
              serviceName: prometheus-operated
              servicePort: 9090
          - path: /grafana(/|$)(.*)
            backend:
              serviceName: grafana
              servicePort: 3000
